alteração final closes #2

--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>contatos das páginas</p>
+    <p>contatos das páginas corretas</p>
 </body>
 </html>
